# GFS_kalman_filter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
filter_functions/implementation/: filter_functions.c
filter_functions/interface/: filter_functions.h
matrix/gfs_implementation/: gfs_matrix_implementation.c
matrix/interface/: gfs_matrix_interface.h
scripts/: amplitude_plotter.py  gaussian_viewer.py  get_data_from_csv.py  kalman_csv_viewer.py  mesh.py  velocity_plotter.py  wave_height_vs_kalman_height.py  waves.py
tests/: digitest.c  filter_tests.c  gaussian_distribution_test.c  math_lib_tests.c  matrix_lib_tests.c  olas.c
tests/test_csv/: test_mesh.csv
